https://github.com/CorporationX/god_bless/pull/11055 доработки согласно замечаниям